# attendance

./: android.yml  app.py  pyproject.toml
.github/workflows/: android.yml
src/attendanceapp/: app.py  qr_generator.py
