[build-system]
requires = ["briefcase"]
build-backend = "briefcase.build"

[tool.briefcase]
project_name = "Attendance QR System"
bundle = "com.dva.attendance"
version = "1.0.0"
url = "https://example.com"
license = "MIT"
author = "Dva.11"
author_email = "you@example.com"

[tool.briefcase.app.attendanceapp]
formal_name = "Attendance QR System"
description = "Attendance system with QR code generator"
sources = ["src/attendanceapp"]
requires = []